# TestVcpkgPrivateRegistry

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
